--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@babel/plugin-transform-react-jsx": "^7.17.3",
     "@testing-library/dom": "^8.12.0",
     "autoprefixer": "^10.4.4",
+    "node-sass": "^7.0.1",
     "postcss": "^8.4.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "sass": "^1.49.9",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
